--- a/data/sources/czsk-magento.yaml
+++ b/data/sources/czsk-magento.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/2/6/f/e/600_483609982.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Nov 5, 5:30 PM CEST: Live stream link --> https://youtu.be/gexDTcZLRKk
+      meta_description: 'Thu, Nov 5, 5:30 PM CET: Live stream link --> https://youtu.be/gexDTcZLRKk
 
         ...
 
