--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -130,7 +130,7 @@ series:
         dtstart: 2021-05-29 10:00:00+02:00
         dtend: 2021-05-29 17:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Feb 9, 6:00 PM CEST: První letošní sraz Frontendistů - tentokrát na téma testování!
+      meta_description: 'Wed, Feb 9, 6:00 PM CET: První letošní sraz Frontendistů - tentokrát na téma testování!
 
 
         Online stream naleznete na youtube https://www.youtube.com/watch?v=7ipac1_L_8w
@@ -194,7 +194,7 @@ series:
         dtstart: 2021-11-10 18:30:00+01:00
         dtend: 2021-11-10 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Mar 9, 6:00 PM CEST: Dost bylo pouze online meetupů.
+      meta_description: 'Wed, Mar 9, 6:00 PM CET: Dost bylo pouze online meetupů.
 
         **Tento bude opět hybridní.**
 
