--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -632,7 +632,7 @@ series:
         dtstart: 2022-02-15 18:30:00+01:00
         dtend: 2022-02-15 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 1, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, Mar 1, 6:30 PM CET: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -668,7 +668,7 @@ series:
         dtstart: 2022-03-01 18:30:00+01:00
         dtend: 2022-03-01 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 15, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, Mar 15, 6:30 PM CET: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
