--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -31,7 +31,7 @@ series:
         dtstart: 2021-09-22 17:00:00+02:00
         dtend: 2021-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 3, 6:30 PM CEST: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
+      meta_description: 'Tue, Dec 3, 6:30 PM CET: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
 
 
         Hello '
