--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -162,7 +162,7 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 6:30 PM CEST: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+      meta_description: 'Wed, Nov 24, 6:30 PM CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
 
 
         📢 Program
@@ -192,7 +192,7 @@ series:
         dtstart: 2021-11-24 18:30:00+01:00
         dtend: 2021-11-24 21:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 26, 6:30 PM CEST: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+      meta_description: 'Wed, Jan 26, 6:30 PM CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
 
 
         📢 Program (anotace níže)
@@ -223,7 +223,7 @@ series:
         dtstart: 2022-01-26 18:30:00+01:00
         dtend: 2022-01-26 21:30:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Feb 26, 9:15 AM CEST: Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.
+      meta_description: 'Sat, Feb 26, 9:15 AM CET: Již po deváté pro vás připravujeme největší WordPress konferenci v ČR.
 
         Rádi se opět uvidíme se všemi, kterým WordPress přirostl k srdci.
 
