--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -260,7 +260,7 @@ series:
         dtstart: 2021-11-18 19:00:00+01:00
         dtend: 2021-11-18 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 4:00 PM CEST: The possibilities of AI in the production process seem to be almost limitless, from autonomous driving to secure payment transactions. Especially in the manufacturing indus'
+      meta_description: 'Thu, Dec 2, 4:00 PM CET: The possibilities of AI in the production process seem to be almost limitless, from autonomous driving to secure payment transactions. Especially in the manufacturing indus'
       og_title: AI-Driven Manufacturing  | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/1/c/6/600_500261414.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/282116019/
@@ -285,7 +285,7 @@ series:
         dtstart: 2021-12-02 16:00:00+01:00
         dtend: 2021-12-02 17:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 7:00 PM CEST: Hello Maker,
+      meta_description: 'Thu, Dec 2, 7:00 PM CET: Hello Maker,
 
 
         Join us on December 2nd for our next live event on LinkedIn, Twitter, and YouTube. This time I will be discussing Wave apps development and deployment for the'
@@ -313,7 +313,7 @@ series:
         dtstart: 2021-12-02 19:00:00+01:00
         dtend: 2021-12-02 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jan 11, 11:00 AM CEST: Despite the clear value potential of AI, many business stakeholders are frustrated with the slow pace of taking AI projects from proof of concept to actual implementation.
+      meta_description: 'Tue, Jan 11, 11:00 AM CET: Despite the clear value potential of AI, many business stakeholders are frustrated with the slow pace of taking AI projects from proof of concept to actual implementation.
 
         '
       og_title: Elevating your AI Projects from PoC to Production at Speed | Meetup
@@ -339,7 +339,7 @@ series:
         dtstart: 2022-01-11 11:00:00+01:00
         dtend: 2022-01-11 12:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 19, 5:00 PM CEST: Register here: https://bit.ly/3IcQR0y
+      meta_description: 'Wed, Jan 19, 5:00 PM CET: Register here: https://bit.ly/3IcQR0y
 
 
         ***
