--- a/data/sources/cloud-native-prague.yaml
+++ b/data/sources/cloud-native-prague.yaml
@@ -31,7 +31,7 @@ series:
         dtstart: 2021-05-18 18:00:00+02:00
         dtend: 2021-05-18 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Mar 2, 6:00 PM CEST: Hey Cloud-natives,
+      meta_description: 'Tue, Mar 2, 6:00 PM CET: Hey Cloud-natives,
 
         we are happy to announce another meetup with amazing talks. We will meet online, so there is no reason to change because of the stain on your old and bel'
       og_title: 'Cloud Native Prague Meetup #15 | Meetup'
@@ -58,7 +58,7 @@ series:
         dtstart: 2021-03-02 18:00:00+01:00
         dtend: 2021-03-02 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jan 28, 6:00 PM CEST: Hi Cloud-natives,
+      meta_description: 'Thu, Jan 28, 6:00 PM CET: Hi Cloud-natives,
 
         we hope you are safe and sound because winter is coming. We managed to prepare some exciting agenda for another online meetup - believe us or not - number'
       og_title: 'Cloud Native Prague Meetup #14 | Meetup'
@@ -85,7 +85,7 @@ series:
         dtstart: 2021-01-28 18:00:00+01:00
         dtend: 2021-01-28 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Nov 24, 6:00 PM CEST: Hey Cloud-natives,
+      meta_description: 'Tue, Nov 24, 6:00 PM CET: Hey Cloud-natives,
 
         it seems like online meetups are our "new normal". Don''t be sad and come join us from your home, we will share experiences and discuss successes and f**k'
       og_title: 'Cloud Native Prague Meetup #13 | Meetup'
