--- a/data/sources/dscc-cze.yaml
+++ b/data/sources/dscc-cze.yaml
@@ -92,7 +92,7 @@ series:
         dtstart: 2020-06-12 08:30:00+02:00
         dtend: 2020-06-12 10:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Mar 18, 8:30 AM CEST: !!!
+      meta_description: 'Wed, Mar 18, 8:30 AM CET: !!!
 
         Event was postponed to April/May, let''s see how a situation looks evolves. Follow us on Twitter (http://twitter.com/czechdsc) for more info.
 
