--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -130,7 +130,7 @@ series:
         dtstart: 2021-10-19 18:00:00+02:00
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 16, 6:00 PM CEST: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
+      meta_description: 'Tue, Nov 16, 6:00 PM CET: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
       og_title: 'Backend Meetup: Advanced Microservices | Meetup'
       image: https://secure.meetupstatic.com/photos/event/c/4/a/5/600_500150341.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/281095226/
