--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -123,7 +123,7 @@ series:
         dtstart: 2020-02-24 18:00:00+01:00
         dtend: 2020-02-24 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 3, 6:00 PM CEST: Hello doers,
+      meta_description: 'Wed, Nov 3, 6:00 PM CET: Hello doers,
 
 
         The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
@@ -153,7 +153,7 @@ series:
         dtstart: 2021-11-03 18:00:00+01:00
         dtend: 2021-11-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Feb 2, 7:00 PM CEST: Hello doers,
+      meta_description: 'Wed, Feb 2, 7:00 PM CET: Hello doers,
 
 
         The fifth online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
