--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -350,16 +350,16 @@ series:
         dtstart: 2022-05-12 17:00:00+02:00
         dtend: 2022-05-12 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Mar 10, 5:00 PM CET: Již je to poměrně dlouho co jsme se potkali fyzicky. Tedy tento meetup bych rád uspořádal u stolu a s dobrým pitím a jídlem k tomu.
+      meta_description: 'Thu, Mar 24, 5:00 PM CET: Již je to poměrně dlouho co jsme se potkali fyzicky. Tedy tento meetup bych rád uspořádal u stolu a s dobrým pitím a jídlem k tomu.
 
         Čas zachováme. Lokalitu upřesním dle při'
-      og_title: CZSK PPUG Meetup u piva | Meetup
+      og_title: '!!Zmena - CZSK PPUG Meetup u piva | Meetup'
       url: https://www.meetup.com/czskppug/events/mdhkssydcfbnb/
       ical:
-        summary: CZSK PPUG Meetup u piva
+        summary: '!!Zmena - CZSK PPUG Meetup u piva'
         description: 'Czech and Slovak Power Platform User Group
 
-          Thursday, March 10 at 5:00 PM
+          Thursday, March 24 at 5:00 PM
 
 
           Již je to poměrně dlouho co jsme se potkali fyzicky. Tedy tento meetup bych rád uspořádal u stolu a s dobrým pitím a jídlem k tomu.Čas zachováme. Loka...
@@ -373,8 +373,8 @@ series:
         status: CONFIRMED
         uid: event_mdhkssydcfbnb@meetup.com
         url: https://www.meetup.com/czskppug/events/283764636/
-        dtstart: 2022-03-10 17:00:00+01:00
-        dtend: 2022-03-10 19:00:00+01:00
+        dtstart: 2022-03-24 17:00:00+01:00
+        dtend: 2022-03-24 19:00:00+01:00
   - meetupcom:
       meta_description: 'Thu, Apr 14, 5:00 PM CEST: Již je to poměrně dlouho co jsme se potkali fyzicky. Tedy tento meetup bych rád uspořádal u stolu a s dobrým pitím a jídlem k tomu.
 
